# django-simple-paginator

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py  tox.ini
django_simple_paginator/: __init__.py  constants.py  converter.py  cursor.py  paginator.py  settings.py  utils.py
django_simple_paginator/templates/paginator/: paginator.html
django_simple_paginator/templatetags/: paginator_tags.py
sample_project/: manage.py
sample_project/static/css/: style.css
sample_project/templates/: base.html  custom_template.html  default.html  default_paginator.html  home.html  large.html
sample_project/templates/paginator/: custom.html  paginator.html
sample_project/web/: settings.py  settings_local.py  urls.py  views.py
templatetags/: paginator_tags.py
tests/: models.py  settings.py  tests.py  urls.py  views.py
tests/templates/django/: example.html
