[project]
name = "django_simple_paginator"
description = "Simple pagination for django"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["pagination", "cursor", "simple", "cursor pagination", "simple pagination"]
license = {text = "MIT"}
dynamic = ["version"]
authors = [
	{ name = "Miroslav Bendík", email = "miroslav.bendik@gmail.com" }
]
classifiers = [
	"Programming Language :: Python :: 3",
]
dependencies = [
	"django",
]

[project.urls]
homepage = "https://github.com/mireq/django-simple-paginator"
documentation = "https://github.com/mireq/django-simple-paginator"
repository = "https://github.com/mireq/django-simple-paginator"
changelog = "https://github.com/mireq/django-simple-paginator/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
	"tox",
	"pylint",
	"pre-commit",
	"bump2version",
	"commitizen",
	"django_jinja"
]

[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["django_simple_paginator"]

[tool.setuptools_scm]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2"
tag_format = "$version"
